// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`Brand should render correctly with link not provided 1`] = `
.c4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c0 {
  background-color: #B80000;
  height: 5rem;
  width: 100%;
}

.c1 {
  max-width: 80rem;
  margin: 0 auto;
  padding-top: 0.5rem;
}

.c2 {
  display: block;
  padding-bottom: 1.5rem;
}

.c5:hover .c2,
.c5:focus .c2 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0.25rem solid #FFFFFF;
}

.c3 {
  display: block;
  height: 1.5rem;
  width: 10.50rem;
  margin-top: 1.25rem;
  fill: #fff;
}

@media (max-width:25rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media screen and (-ms-high-contrast:active),print {
  .c3 {
    fill: windowText;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      <svg
        aria-hidden="true"
        className="c3"
        focusable="false"
        viewBox="0 0 167.95 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fillrule="evenodd"
        >
          <path
            d="M84.32"
          />
        </g>
      </svg>
      <span
        className="c4"
      >
        Default Brand Name
      </span>
    </span>
  </div>
</div>
`;

exports[`Brand should render correctly with link provided 1`] = `
.c6 {
=======
exports[`Brand should render correctly 1`] = `
.c4 {
>>>>>>> latest
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c0 {
  background-color: #B80000;
  height: 3.5rem;
  width: 100%;
  padding: 0 0.5rem;
}

<<<<<<< HEAD
.c1 {
  max-width: 80rem;
  margin: 0 auto;
}

.c3 {
  display: inline-block;
  padding-top: 0.5rem;
=======
.c2 {
  display: inline-block;
  width: 100%;
  max-width: 17.5rem;
  min-width: 11.25rem;
>>>>>>> latest
}

.c3 {
  box-sizing: content-box;
  fill: #FFFFFF;
  padding-top: 1rem;
  padding-bottom: 0.75rem;
  width: 100%;
}

.c1:hover .c3,
.c1:focus .c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0.25rem solid #FFFFFF;
}

@media (min-width:37.5rem) {
  .c0 {
    height: 5rem;
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    padding-top: 1.75rem;
    padding-bottom: 1.5rem;
  }
}

@media screen and (-ms-high-contrast:active),print {
  .c3 {
    fill: windowText;
  }
}

<div
  className="c0"
>
  <a
    className="c1 c2"
    href="https://www.bbc.co.uk/news"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={24}
      viewBox="0 0 167.95 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillrule="evenodd"
      >
        <path
          d="M84.32"
        />
      </g>
    </svg>
    <span
      className="c4"
    >
      Default Brand Name
    </span>
  </a>
</div>
`;

exports[`Brand should render correctly with svg not provided 1`] = `
.c0 {
  background-color: #B80000;
  width: 100%;
  padding: 0 0.5rem;
}

<<<<<<< HEAD
.c1 {
  max-width: 80rem;
  margin: 0 auto;
  padding-top: 0.5rem;
}

@media (max-width:25rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:62.9375rem) {
=======
@media (min-width:37.5rem) {
>>>>>>> latest
  .c0 {
    padding: 0 1rem;
  }
}

<div
  className="c0"
/>
`;
